Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -4,6 +4,7 @@
 
 ## < 실습 코드 >
 - 실습 1
+- global structure 생성하기
 <img width="1520" height="660" alt="image" src="https://github.com/user-attachments/assets/d533af41-58cf-459f-a95e-12c8662a9c39" />
 </br>
 
