Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -1,6 +1,12 @@
 ## < Internal Table (화면 출력/데이터 처리용 메모리 테이블) >
+</br>
 
+**1. Line Type**
+- 내부 테이블 한 줄(Row)의 구조
 
+Structure 또는 Dictionary 테이블 구조를 기반으로 함
+
+예: TABLE OF ty_user → ty_user가 line type
 ---
 
 </br>
