--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -1,12 +1,27 @@
 ## < Internal Table (화면 출력/데이터 처리용 메모리 테이블) >
 </br>
 
-**1. Line Type**
+**1) Line Type**
 - 내부 테이블 한 줄(Row)의 구조
+- Structure 또는 Dictionary 테이블 구조를 기반으로 함
+- 예: `TABLE OF ty_user` → `ty_user`가 line type
+</br>
 
-Structure 또는 Dictionary 테이블 구조를 기반으로 함
+**2) Primary Key**
+- key = 내부 테이블에서 검색/행 식별에 사용되는 기준 필드
+  - `components` → 어떤 필드들이 키인지
+  - `uniqueness` → 중복 허용 여부 (UNIQUE / NON-UNIQUE)
+  - `sequence` → 정렬 여부 (Sorted 테이블에서만 의미 있음)
+</br>
 
-예: TABLE OF ty_user → ty_user가 line type
+**3) Table Kind**
+- 내부 테이블의 정렬 방식, 중복 가능 여부, 검색 성능을 결정
+- 종류:
+  - Standard Table (Index Table)
+  - Sorted Table
+  - Hashed Table
+</br>
+
 ---
 
 </br>
