Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -21,6 +21,19 @@
   - Sorted Table
   - Hashed Table
 </br>
+</br>
+
+**< ABAP Internal Table 비교 >**
+
+| 구분 | STANDARD TABLE | SORTED TABLE | HASHED TABLE |
+|------|----------------|--------------|--------------|
+| **Table Kind** | Standard Table | Sorted Table | Hashed Table |
+| **Index Access** | ✔ 가능 | ✔ 가능 | ❌ 불가능 |
+| **Key Access** | ✔ 가능 | ✔ 가능 | ✔ 가능 |
+| **Key Uniqueness** | NON-UNIQUE (중복 허용) | UNIQUE / NON-UNIQUE (중복 허용/불가 둘 다 가능) | UNIQUE (중복 불가) |
+| **Use In** | Mainly Index Access (주로 인덱스 접근) | Mainly Key Access (주로 키 기반 검색) | Only Key Access (키 기반 초고속 검색 전용) |
+
+</br>
 
 ---
 
