Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -36,6 +36,29 @@
 | **Use In** | Mainly Index Access (주로 인덱스 접근) | Mainly Key Access (주로 키 기반 검색) | Only Key Access (키 기반 초고속 검색 전용) |
 
 </br>
+</br>
+
+### < Internal Table 정의 및 사용 흐름 >
+**1) Line Type 정의**
+- 한 행(row)의 구조 정의. 항공사 ID, 연결편 ID, 비행 날짜, 가격 필드 포함
+```abap
+TYPES: BEGIN OF bc400_s_flight,
+         carrid TYPE s_carr_id,
+         connid TYPE s_conn_id,
+         fldate TYPE s_date,
+         price  TYPE p DECIMALS 2,
+       END OF bc400_s_flight.
+```
+</br>
+
+**2) Table Type 정의**
+- Internal Table 전체 구조 정의, Standard Table, NON-UNIQUE Key 설정
+```abap
+TYPES tt_flights TYPE STANDARD TABLE OF bc400_s_flight
+       WITH NON-UNIQUE KEY carrid connid fldate.
+```
+
+</br>
 
 ---
 
