--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -38,26 +38,45 @@
 </br>
 </br>
 
-### < Internal Table 정의 및 사용 흐름 >
-**1) Line Type 정의**
-- 한 행(row)의 구조 정의. 항공사 ID, 연결편 ID, 비행 날짜, 가격 필드 포함
+### < Internal Table 선언 3가지 방식 >
+**1) Table Type 기반**
+- 이미 정의된 Table Type을 사용하여 Internal Table 선언
+- Table Type에 Line Type, Table Kind, Key 등이 미리 정의되어 있어 코드가 간결
 ```abap
-TYPES: BEGIN OF bc400_s_flight,
-         carrid TYPE s_carr_id,
-         connid TYPE s_conn_id,
-         fldate TYPE s_date,
-         price  TYPE p DECIMALS 2,
-       END OF bc400_s_flight.
+DATA <internal_table_name> TYPE <table_type>.
+```
+```abap
+DATA gt_flights TYPE BC400_T_FLIGHTS.
+DATA gt_flights TYPE tt_flights.
 ```
 </br>
 
-**2) Table Type 정의**
-- Internal Table 전체 구조 정의, Standard Table, NON-UNIQUE Key 설정
+**2) Table Kind + Key 직접 정의**
+- Table Type 없이 Internal Table 종류(Standard/Sorted/Hashed)와 Key를 직접 지정
+- Table Type 없이 바로 선언 가능, Key 조건도 자유롭게 지정
 ```abap
-TYPES tt_flights TYPE STANDARD TABLE OF bc400_s_flight
-       WITH NON-UNIQUE KEY carrid connid fldate.
+DATA <internal_table_name> TYPE <table_kind> TABLE OF <structure_type>
+     WITH [UNIQUE | NON-UNIQUE] KEY <field1> <field2> ... .
 ```
+```abap
+DATA gt_iteb1 TYPE STANDARD TABLE OF BC400_S_FLIGHT WITH DEFAULT KEY.
+DATA gt_item2 TYPE STANDARD TABLE OF BC400_S_FLIGHT WITH NON-UNIQUE KEY CARRID CONNID.
+DATA gt_item4 TYPE SORTED TABLE OF BC400_S_FLIGHT WITH NON-UNIQUE KEY CARRID CONNID.
+DATA get_item6 TYPE HASHED TABLE OF BC400_S_FLIGHT WITH UNIQUE KEY CARRID CONNID.
+```
+</br>
 
+**3) 단순 Table of Structure**
+- Key를 지정하지 않고 단순히 Table of Structure 선언
+- 간단하게 선언 가능, Standard Table 기본
+```abap
+DATA <internal_table_name> TYPE TABLE OF <structure_type>.
+```
+```abap
+DATA gt_flight2 TYPE TABLE OF BC400_S_FLIGHT.
+DATA gt_flight3 TYPE TABLE OF SCARR.
+DATA gt_item3 TYPE TABLE OF BC400_S_FLIGHT.
+```
 </br>
 
 ---
