Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -80,6 +80,89 @@ DATA gt_flight3 TYPE TABLE OF SCARR.
 DATA gt_item3 TYPE TABLE OF BC400_S_FLIGHT.
 ```
 </br>
+</br>
+
+### < ABAP Internal Table 및 Structure 선언과 사용 예제 >
+**1) Internal Table 선언 (Table Type / Structure 기반)**
+- `gt_flight` : 이미 정의된 Table Type을 기반으로 Internal Table 생성.
+- `gt_flight2` : Global Structure를 기반으로 Internal Table 생성.
+- `gt_flight3` : DB Transparent Table 구조를 그대로 Internal Table로 선언.
+- `gt_flight4` : 기존 Table gt_flight3의 구조와 동일하게 선언(LIKE 사용).
+```abap
+DATA: gt_flight TYPE BC400_T_FLIGHTS,   " Table type 사용
+      gt_flight2 TYPE TABLE OF BC400_S_FLIGHT,   " Global structure 사용
+      gt_flight3 TYPE TABLE OF SCARR, " DB Table (Transparent table) 사용
+      gt_flight4 LIKE gt_flight3. " LIKE 사용해서 Internal Table 사용
+```
+</br>
+
+**2) Standard Internal Table 선언**
+- `gt_iteb1` : 기본 키를 가지는 표준 Internal Table.
+- `gt_item2` : 지정한 필드(CARRID, CONNID)를 기준으로 비유니크 키를 가지는 표준 Internal Table.
+- `gt_item3` : 키를 명시하지 않은 표준 Internal Table.
+```abap
+" Standard internal table
+DATA: gt_iteb1 TYPE STANDARD TABLE OF BC400_S_FLIGHT
+               WITH DEFAULT KEY,
+      gt_item2 TYPE STANDARD TABLE OF BC400_S_FLIGHT
+               WITH NON-UNIQUE KEY CARRID CONNID,
+      gt_item3 TYPE TABLE OF BC400_S_FLIGHT.
+```
+</br>
+
+**3) Sorted Internal Table 선언**
+- `gt_item4` : 지정된 키 기준으로 항상 정렬되는 Internal Table, 중복 키 허용.
+- `gt_itab5` : 지정된 키 기준으로 정렬, 중복 키 불가.
+```abap
+" Sorted internal table
+DATA: gt_item4 TYPE SORTED TABLE OF BC400_S_FLIGHT
+               WITH NON-UNIQUE KEY CARRID CONNID, " key는 띄어쓰기로 구분
+      gt_itab5 TYPE SORTED TABLE OF BC400_S_FLIGHT
+               WITH UNIQUE KEY CARRID CONNID.
+```
+</br>
+
+**4) Hashed Internal Table 선언**
+- `get_item6` : Key 기반 Hash 구조를 사용, 빠른 검색 가능, 반드시 UNIQUE KEY 필요.
+```abap
+* Hashed internal table
+DATA: get_item6 TYPE HASHED TABLE OF BC400_S_FLIGHT
+                WITH UNIQUE KEY CARRID CONNID.
+```
+</br>
+
+**5) Structure 변수 선언**
+```abap
+" Glocal structure type
+DATA gs_flight TYPE BC400_S_FLIGHT.
+
+" transparent table 가지고도 스트럭처 변수 생성 가능
+DATA gs_flight2 TYPE SCARR.
+
+" Table type의 Line type 정보로 스트럭처 변수 생성 가능
+DATA gs_flight3 TYPE LINE OF BC400_T_FLIGHTS.
+
+" 위에서 선언한 Internal table에서 Line type만 복사하여 생성
+DATA gs_flight4 LIKE LINE OF gt_iteb1.
+```
+</br>
+
+**6) 기타 Table/Structure 선언**
+- `aa` : Table Type 기반 Internal Table.
+- `bb` : Table Type의 Table 선언.
+- `cc` : Table Type의 한 행(Line Type) 구조 변수.
+- `dd` : bb Table 라인과 동일한 구조 변수(LIKE LINE OF).
+- `ee` : 단일 Structure 변수.
+- `ff` : dd와 같은 구조의 Internal Table(LIKE TABLE OF).
+```abap
+DATA: aa TYPE BC400_T_CONNECTIONS,
+      bb TYPE TABLE OF BC400_T_CONNECTIONS,
+      cc TYPE LINE OF BC400_T_CONNECTIONS,
+      dd LIKE LINE OF bb,
+      ee TYPE S_CARR_ID,
+      ff LIKE TABLE OF dd.
+```
+</br>
 
 ---
 
