--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -82,7 +82,7 @@ DATA gt_item3 TYPE TABLE OF BC400_S_FLIGHT.
 </br>
 </br>
 
-### < ABAP Internal Table 및 Structure 선언과 사용 예제 >
+## < ABAP Internal Table 및 Structure 선언과 사용 예제 >
 **1) Internal Table 선언 (Table Type / Structure 기반)**
 - `gt_flight` : 이미 정의된 Table Type을 기반으로 Internal Table 생성.
 - `gt_flight2` : Global Structure를 기반으로 Internal Table 생성.
