Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -164,6 +164,13 @@ DATA: aa TYPE BC400_T_CONNECTIONS,
       ff LIKE TABLE OF dd.
 ```
 </br>
+</br>
+
+## ABAP 인터널 테이블 CRUD 명령어
+
+
+</br>
+
 
 ---
 
