Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -167,12 +167,127 @@ DATA: aa TYPE BC400_T_CONNECTIONS,
 ```
 </br>
 </br>
-
-## ABAP 인터널 테이블 CRUD 명령어
-
-
 </br>
 
+## ABAP 인터널 테이블 CRUD 명령어
+</br>
+
+**1-1) APPEND – 인터널 테이블 끝에 값 추가**
+- 인터널 테이블의 맨 끝에 데이터를 추가
+- Standard Table 기준 → 삽입 순서 그대로 유지
+```abap
+APPEND <추가할_행> TO <인터널_테이블>.
+APPEND VALUE #( <필드1> = <값1> <필드2> = <값2> … ) TO <인터널_테이블>.
+```
+```abap
+DATA: flight TYPE BC400_S_FLIGHT,
+      flights_table TYPE STANDARD TABLE OF BC400_S_FLIGHT.
+
+flight-carrid = 'AA'.
+flight-connid = '001'.
+
+APPEND flight TO flights_table.
+```
+</br>
+
+**1-2) APPEND LINES OF – 다른 테이블의 여러 행 끝에 추가**
+- `<소스_테이블>`의 여러 행을 `<대상_테이블>` 끝에 추가
+```abap
+APPEND LINES OF <소스_테이블> [WHERE <조건>] TO <대상_테이블>.
+```
+```abap
+APPEND LINES OF flights_table1 WHERE carrid = 'AA' TO flights_table2.
+```
+</br>
+</br>
+
+**2-1) INSERT – 특정 위치 또는 조건에 값 삽입**
+- 조건 생략 → 맨 끝에 추가 (APPEND와 동일)
+- 조건/인덱스 지정 가능 → 원하는 위치에 삽입
+```abap
+INSERT <추가할_행> INTO <인터널_테이블>.                " 조건 없으면 끝에 추가
+INSERT <추가할_행> INTO <인터널_테이블> INDEX <위치>.   " 특정 위치에 삽입
+INSERT LINES OF <다른_테이블> INTO TABLE <인터널_테이블>.
+```
+```abap
+INSERT flight INTO flights_table INDEX 2.
+INSERT flight INTO flights_table.  " 맨 끝
+```
+</br>
+
+**2-2) INSERT LINES OF – 다른 테이블의 여러 행 삽입**
+- `<소스_테이블>`의 여러 행을 `<대상_테이블>`에 삽입
+```abap
+INSERT LINES OF <소스_테이블> [WHERE <조건1>] INTO <대상_테이블> [INDEX <위치>] [FROM <조건2>].
+```
+```abap
+INSERT LINES OF flights_table1 WHERE carrid = 'AA' INTO flights_table2.
+```
+</br>
+</br>
+
+**3) READ – 특정 조건/위치의 값 조회**
+- 조건에 맞는 첫 번째 행을 가져옴
+- 성공 → `sy-subrc` = 0, 실패 → `sy-subrc` <> 0
+```abap
+READ TABLE <인터널_테이블> INTO <행> 
+     [WITH KEY <필드1> = <값1> <필드2> = <값2> …] 
+     [INDEX <위치>] [BINARY SEARCH].
+```
+```abap
+READ TABLE flights_table INTO flight WITH KEY carrid = 'AA' connid = '001'.
+IF sy-subrc = 0.
+  WRITE: / 'Flight found:', flight-carrid.
+ENDIF.
+```
+</br>
+</br>
+
+**4) CHANGE – 기존 값 수정**
+- 조건에 맞는 행을 덮어씀
+- Standard Table 기준 → 조건에 맞는 여러 행이 있어도, 그 중에서 가장 먼저 나오는 한 행만 수정
+- INDEX 지정 시 → 해당 위치 행만 변경
+```abap
+MODIFY TABLE <인터널_테이블> FROM <행>.
+MODIFY TABLE <인터널_테이블> FROM <행> INDEX <위치>.
+MODIFY TABLE <인터널_테이블> FROM <다른_테이블>.
+```
+```abap
+flight-cityfrom = 'Seoul'.
+MODIFY TABLE flights_table FROM flight.
+```
+</br>
+</br>
+
+**5) DELETE – 행 삭제**
+- `INDEX` → 특정 위치 삭제
+- `WHERE` → 조건에 맞는 행 삭제
+- `FROM` → 구조체와 동일한 행 삭제
+```abap
+DELETE <인터널_테이블> INDEX <위치>.
+DELETE <인터널_테이블> WHERE <필드1> = <값1> <필드2> = <값2> ….
+DELETE <인터널_테이블> FROM <행>.
+DELETE TABLE <인터널_테이블> WHERE <조건>.
+```
+```abap
+DELETE flights_table WHERE carrid = 'AA'.
+DELETE flights_table INDEX 1.
+```
+</br>
+</br>
+
+**6) LOOP AT – 테이블 반복 처리**
+- 인터널 테이블의 모든 행 또는 조건에 맞는 행을 반복 처리
+- `WHERE` 조건 생략 시 → 테이블 전체를 반복
+```abap
+LOOP AT <인터널_테이블> INTO <행> [WHERE <조건>].
+  " 반복하면서 처리할 코드
+ENDLOOP.
+```
+
+</br>
+</br>
+</br>
 
 ---
 
