Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -169,7 +169,7 @@ DATA: aa TYPE BC400_T_CONNECTIONS,
 </br>
 </br>
 
-## ABAP 인터널 테이블 CRUD 명령어
+## < ABAP 인터널 테이블 CRUD 명령어 >
 </br>
 
 **1-1) APPEND – 인터널 테이블 끝에 값 추가**
