Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -289,6 +289,21 @@ LOOP AT <인터널_테이블> INTO <행> [WHERE <조건>].
   " 반복하면서 처리할 코드
 ENDLOOP.
 ```
+```abap
+DATA: flight TYPE BC400_S_FLIGHT,
+      flights_table TYPE STANDARD TABLE OF BC400_S_FLIGHT.
+
+* 데이터 예시
+* flight_table = [
+*   {carrid='AA', connid='001'},
+*   {carrid='BB', connid='002'},
+*   {carrid='AA', connid='003'}
+* ]
+
+LOOP AT flights_table INTO flight WHERE carrid = 'AA'.
+  WRITE: / flight-carrid, flight-connid.
+ENDLOOP.
+```
 
 </br>
 </br>
