--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -207,13 +207,13 @@ APPEND LINES OF flights_table1 WHERE carrid = 'AA' TO flights_table2.
 - 조건 생략 → 맨 끝에 추가 (APPEND와 동일)
 - 조건/인덱스 지정 가능 → 원하는 위치에 삽입
 ```abap
-INSERT <추가할_행> INTO <인터널_테이블>.                " 조건 없으면 끝에 추가
-INSERT <추가할_행> INTO <인터널_테이블> INDEX <위치>.   " 특정 위치에 삽입
+INSERT <추가할_행> INTO TABLE <인터널_테이블>.                " 조건 없으면 끝에 추가
+INSERT <추가할_행> INTO TABLE <인터널_테이블> INDEX <위치>.   " 특정 위치에 삽입
 INSERT LINES OF <다른_테이블> INTO TABLE <인터널_테이블>.
 ```
 ```abap
-INSERT flight INTO flights_table INDEX 2.
-INSERT flight INTO flights_table.  " 맨 끝
+INSERT flight INTO TABLE flights_table INDEX 2.
+INSERT flight INTO TABLE flights_table.  " 맨 끝
 ```
 </br>
 
