Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -162,7 +162,7 @@ DATA gs_flight4 LIKE LINE OF gt_iteb1.
 - `ff` : dd와 같은 구조의 Internal Table(LIKE TABLE OF).
 ```abap
 DATA: aa TYPE BC400_T_CONNECTIONS,
-      " bb는 Table Type이 아니라 임시 테이블 선언이어서 LINE OF를 참조할 수 없음
+      " Table Type 위에 또 TABLE OF를 붙일 수 없음
       bb TYPE TABLE OF BC400_T_CONNECTIONS,    " bb TYPE aa 로 바꾸기
       cc TYPE LINE OF BC400_T_CONNECTIONS,
       dd LIKE LINE OF bb,
