Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -184,7 +184,6 @@ DATA: aa TYPE BC400_T_CONNECTIONS,
 - Standard Table 기준 → 삽입 순서 그대로 유지
 ```abap
 APPEND <추가할_행> TO <인터널_테이블>.
-APPEND VALUE #( <필드1> = <값1> <필드2> = <값2> … ) TO <인터널_테이블>.
 ```
 ```abap
 DATA: flight TYPE BC400_S_FLIGHT,
@@ -214,8 +213,9 @@ APPEND LINES OF flights_table1 WHERE carrid = 'AA' TO flights_table2.
 - 조건/인덱스 지정 가능 → 원하는 위치에 삽입
 ```abap
 INSERT <추가할_행> INTO TABLE <인터널_테이블>.                " 조건 없으면 끝에 추가
-INSERT <추가할_행> INTO TABLE <인터널_테이블> INDEX <위치>.   " 특정 위치에 삽입
-INSERT LINES OF <다른_테이블> INTO TABLE <인터널_테이블>.
+INSERT <행> INTO <인터널_테이블> INDEX <번호>.                " 특정 위치에 삽입
+INSERT LINES OF <소스_테이블> INTO TABLE <인터널_테이블>.
+INSERT LINES OF <소스_테이블> INTO <대상_테이블> INDEX <번호>. " 특정 위치에 삽입
 ```
 ```abap
 INSERT flight INTO TABLE flights_table INDEX 2.
@@ -259,8 +259,7 @@ ENDIF.
 - INDEX 지정 시 → 해당 위치 행만 변경
 ```abap
 MODIFY TABLE <인터널_테이블> FROM <행>.
-MODIFY TABLE <인터널_테이블> FROM <행> INDEX <위치>.
-MODIFY TABLE <인터널_테이블> FROM <다른_테이블>.
+MODIFY <인터널_테이블> FROM <행> INDEX <번호>.
 ```
 ```abap
 flight-cityfrom = 'Seoul'.
