Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -324,6 +324,55 @@ LOOP AT flights_table INTO flight WHERE carrid = 'AA'.
   WRITE: / flight-carrid, flight-connid.
 ENDLOOP.
 ```
+</br>
+</br>
+</br>
+
+## < ABAP 인터널 테이블 CRUD 명령어 예제 코드 >
+</br>
+
+**1) Standard Table에 APPEND, READ, LOOP 사용**
+```abap
+TYPES: BEGIN OF ty_line,
+        carrid TYPE sflight-carrid,
+        connid TYPE sflight-connid,
+        carrname TYPE scarr-carrname,
+       END OF ty_line.
+**********************************************************************
+* Standard table 선언
+DATA: lt_tab1 TYPE STANDARD TABLE OF ty_line
+              WITH DEFAULT KEY,
+      lt_tab2 TYPE STANDARD TABLE OF ty_line
+              WITH NON-UNIQUE KEY CARRID CONNID.
+
+DATA: ls_line TYPE ty_line. " work-area (wa)
+ls_line-carrid = 'AA'.
+ls_line-connid = '0017'.
+ls_line-carrname = 'Add Data'.
+APPEND ls_line TO lt_tab2.
+
+ls_line-carrid = 'BB'.
+ls_line-connid = '0064'.
+ls_line-carrname = 'Add Data 2'.
+APPEND ls_line TO lt_tab2.
+
+ls_line-carrid = 'AA'.
+ls_line-connid = '0017'.
+ls_line-carrname = 'Add Data 3'.
+APPEND ls_line TO lt_tab2.  " 키 중복
+
+LOOP AT lt_tab2 INTO ls_line.
+  WRITE:/ ls_line-carrid,
+          ls_line-connid,
+          ls_line-carrname.
+ENDLOOP.
+
+CLEAR ls_line.  "위에서 한번 사용했으니 초기화
+READ TABLE lt_tab2 INTO ls_line
+     WITH KEY CARRID = 'AA' CONNID = '0017'.
+WRITE:/ 'Standard table: ',
+      / ls_line-carrid, ls_line-carrname.
+```
 
 </br>
 </br>
