Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -338,7 +338,9 @@ TYPES: BEGIN OF ty_line,
         connid TYPE sflight-connid,
         carrname TYPE scarr-carrname,
        END OF ty_line.
+
 **********************************************************************
+
 * Standard table 선언
 DATA: lt_tab1 TYPE STANDARD TABLE OF ty_line
               WITH DEFAULT KEY,
@@ -372,6 +374,187 @@ READ TABLE lt_tab2 INTO ls_line
      WITH KEY CARRID = 'AA' CONNID = '0017'.
 WRITE:/ 'Standard table: ',
       / ls_line-carrid, ls_line-carrname.
+```
+</br>
+
+**2) Sorted Table에 INSERT, READ, LOOP 사용**
+```abap
+TYPES: BEGIN OF ty_line,
+        carrid TYPE sflight-carrid,
+        connid TYPE sflight-connid,
+        carrname TYPE scarr-carrname,
+       END OF ty_line.
+
+**********************************************************************
+
+* Sorted table 선언
+DATA: lt_sort TYPE SORTED TABLE OF ty_line
+              WITH NON-UNIQUE KEY CARRID CONNID.
+
+" 데이터 추가
+DATA: ls_line TYPE ty_line.
+ls_line-carrid ='ZZ'.
+ls_line-connid = '0017'.
+ls_line-carrname = 'First Data'.
+INSERT ls_line INTO TABLE lt_sort.
+
+ls_line-carrid ='AA'.
+ls_line-connid = '0017'.
+ls_line-carrname = 'Second Data'.
+* APPEND ls_line to lt_sort. "덤프 발생
+INSERT ls_line INTO TABLE lt_sort.
+
+READ TABLE lt_sort INTO ls_line INDEX 1.
+
+IF sy-subrc = 0.
+  WRITE:/ 'Sorted 결과: ',
+          ls_line-carrid, ls_line-connid.
+ENDIF.
+
+LOOP AT lt_sort INTO ls_line.
+  WRITE:/ ls_line-carrid,
+          ls_line-connid,
+          ls_line-carrname.
+ENDLOOP.
+```
+</br>
+
+**3) Hashed Table에 INSERT와 READ TABLE(키 기준) 사용**
+```abap
+TYPES: BEGIN OF ty_line,
+        carrid TYPE sflight-carrid,
+        connid TYPE sflight-connid,
+        carrname TYPE scarr-carrname,
+       END OF ty_line.
+
+**********************************************************************
+
+" Hashed Internal Table
+DATA: lt_hash TYPE HASHED TABLE OF ty_line
+              WITH UNIQUE KEY CARRID CONNID.
+DATA: ls_line TYPE ty_line.
+ls_line-carrid = 'AA'.
+ls_line-connid = '0017'.
+ls_line-carrname = 'Add Data'.
+INSERT ls_line INTO TABLE lt_hash.
+
+CLEAR ls_line.
+*READ TABLE lt_hash INTO ls_line INDEX 1. " 에러 (해쉬테이블에는 인덱스 x)
+READ TABLE lt_hash INTO ls_line
+     WITH KEY CARRID = 'AA' CONNID = '0017'.
+IF sy-subrc = 0.
+  WRITE:/ 'Hashed 결과: ',
+          ls_line-carrid, ls_line-connid.
+ENDIF.
+```
+</br>
+
+**4) DB 테이블 데이터를 Internal Table에 SELECT, LOOP 사용**
+```abap
+DATA: gt_flight TYPE TABLE OF SFLIGHT,
+      gs_flight TYPE SFLIGHT.
+
+SELECT *
+  INTO TABLE gt_flight
+  FROM sflight
+  WHERE carrid = 'AA'
+    AND CONNID = '0017'.
+
+LOOP AT gt_flight INTO gs_flight.
+  WRITE:/ gs_flight-carrid,
+          gs_flight-connid,
+          gs_flight-fldate.
+ENDLOOP.
+```
+</br>
+
+**5) Internal Table에 APPEND, INSERT, LOOP 사용**
+```abap
+DATA: gs_flight TYPE SFLIGHT,
+      gt_flight LIKE TABLE OF gs_flight.
+
+gs_flight-carrid = 'AA'.
+gs_flight-connid = '0017'.
+gs_flight-fldate = '20250501'.
+gs_flight-price = '10000'.
+gs_flight-currency = 'USD'.
+gs_flight-seatsmax = 400.
+gs_flight-seatsocc = 200.
+APPEND gs_flight TO gt_flight.
+
+gs_flight-carrid = 'BB'.
+gs_flight-connid = '0027'.
+gs_flight-fldate = '20260501'.
+gs_flight-price = '1000'.
+gs_flight-currency = 'EUR'.
+gs_flight-seatsmax = 550.
+gs_flight-seatsocc = 20.
+APPEND gs_flight TO gt_flight.
+
+gs_flight-carrid = 'AB'.
+gs_flight-connid = '0064'.
+gs_flight-fldate = '20270501'.
+gs_flight-price = '2500'.
+gs_flight-currency = 'EUR'.
+gs_flight-seatsmax = 300.
+gs_flight-seatsocc = 250.
+INSERT gs_flight INTO TABLE gt_flight.
+
+gs_flight-carrid = 'AC'.
+gs_flight-connid = '0224'.
+gs_flight-fldate = '20280501'.
+gs_flight-price = '3000'.
+gs_flight-currency = 'EUR'.
+gs_flight-seatsmax = 60.
+gs_flight-seatsocc = 5.
+INSERT gs_flight INTO gt_flight INDEX 1.
+
+LOOP AT gt_flight INTO gs_flight.
+  WRITE:/ gs_flight-carrid,
+          gs_flight-connid,
+          gs_flight-fldate,
+          gs_flight-price,
+          gs_flight-currency,
+          gs_flight-seatsmax,
+          gs_flight-seatsocc.
+ENDLOOP.
+```
+</br>
+
+**6) Standard Table에 APPEND, INSERT, LOOP 사용**
+```abap
+DATA: gs_tab TYPE TABLE OF ZSCLB03_DEMO,    " 그냥 TABLE OF 하면 standard
+      gs_line TYPE ZSCLB03_DEMO.
+
+gs_line-CARRID = 'AA'.
+gs_line-CARRNAME = '김예원'.
+gs_line-CONNID = '0017'.
+gs_line-CITYFROM = '인천'.
+gs_line-CITYTO = '서울'.
+APPEND gs_line TO gs_tab.
+
+gs_line-CARRID = 'BB'.
+gs_line-CARRNAME = '김예원'.
+gs_line-CONNID = '0016'.
+gs_line-CITYFROM = '광주'.
+gs_line-CITYTO = '철원'.
+INSERT gs_line INTO TABLE gs_tab.
+
+gs_line-CARRID = 'CC'.
+gs_line-CARRNAME = '김예원'.
+gs_line-CONNID = '0015'.
+gs_line-CITYFROM = '부산'.
+gs_line-CITYTO = '인천'.
+INSERT gs_line INTO gs_tab INDEX 1.
+
+CLEAR gs_line.
+LOOP AT gs_tab INTO gs_line.
+  WRITE:/ gs_line-CARRID,
+          gs_line-CARRNAME,
+          gs_line-CONNID,
+          gs_line-CITYFROM,
+          gs_line-CITYTO.
+ENDLOOP.
 ```
 
 </br>
