Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -1,5 +1,5 @@
 ## < Internal Table (화면 출력/데이터 처리용 메모리 테이블) >
-- 내부 테이블은 프로그램 안에서 임시로 데이터를 저장·처리하는 메모리상의 테이블
+- Internal 테이블은 프로그램 안에서 임시로 데이터를 저장·처리하는 메모리상의 테이블
 - 일반 테이블은 DB에 실제로 저장되어 여러 사용자와 프로그램이 공유하는 영구 테이블
 </br>
 
