Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -190,6 +190,8 @@ DATA: aa TYPE BC400_T_CONNECTIONS,
 </br>
 
 ## < ABAP 인터널 테이블 CRUD 명령어 >
+- INDEX 사용 시 대부분 Table 이름 뒤에 TABLE 키워드 생략 가능
+- INSERT만 예외적으로 `INTO TABLE` 또는 `INTO itab` 둘 다 가능
 </br>
 
 **1-1) APPEND – 인터널 테이블 끝에 값 추가**
