Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -273,13 +273,23 @@ ENDIF.
 - 조건에 맞는 행을 덮어씀
 - Standard Table 기준 → 조건에 맞는 여러 행이 있어도, 그 중에서 가장 먼저 나오는 한 행만 수정
 - INDEX 지정 시 → 해당 위치 행만 변경
+- TRANSPORTING <필드> → 지정한 필드만 수정
 ```abap
-MODIFY TABLE <인터널_테이블> FROM <행>.
-MODIFY <인터널_테이블> FROM <행> INDEX <번호>.
+MODIFY <인터널_테이블> 
+       FROM <행_데이터> 
+       [INDEX <위치>] 
+       [TRANSPORTING <필드1> <필드2> ...] 
+       [WHERE <조건>].
 ```
 ```abap
 flight-cityfrom = 'Seoul'.
 MODIFY TABLE flights_table FROM flight.
+
+flight-price = 20000.
+MODIFY flights_table FROM flight TRANSPORTING price WHERE carrid = 'AA'.
+
+flight-price = 15000.
+MODIFY flights_table FROM flight INDEX 2.
 ```
 </br>
 </br>
@@ -290,10 +300,11 @@ MODIFY TABLE flights_table FROM flight.
 - `WHERE` → 조건에 맞는 행 삭제
 - `FROM` → 구조체와 동일한 행 삭제
 ```abap
-DELETE <인터널_테이블> INDEX <위치>.
-DELETE <인터널_테이블> WHERE <필드1> = <값1> <필드2> = <값2> ….
-DELETE <인터널_테이블> FROM <행>.
-DELETE TABLE <인터널_테이블> WHERE <조건>.
+DELETE <internal_table> 
+       [INDEX <n>] 
+       [WHERE <field1> = <value1> <field2> = <value2> ...] 
+       [FROM <work_area>] 
+       [TABLE <internal_table> WHERE <condition>].
 ```
 ```abap
 DELETE flights_table WHERE carrid = 'AA'.
