Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -269,7 +269,7 @@ ENDIF.
 </br>
 </br>
 
-**4) CHANGE – 기존 값 수정**
+**4) MODIFY – 기존 값 수정**
 - 조건에 맞는 행을 덮어씀
 - Standard Table 기준 → 조건에 맞는 여러 행이 있어도, 그 중에서 가장 먼저 나오는 한 행만 수정
 - INDEX 지정 시 → 해당 위치 행만 변경
