Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -242,10 +242,10 @@ INSERT flight INTO TABLE flights_table.  " 맨 끝
 **2-2) INSERT LINES OF – 다른 테이블의 여러 행 삽입**
 - `<소스_테이블>`의 여러 행을 `<대상_테이블>`에 삽입
 ```abap
-INSERT LINES OF <소스_테이블> [WHERE <조건1>] INTO <대상_테이블> [INDEX <위치>] [FROM <조건2>].
+INSERT LINES OF <소스_테이블> [WHERE <조건1>] INTO TABLE <대상_테이블> [INDEX <위치>] [FROM <조건2>].
 ```
 ```abap
-INSERT LINES OF flights_table1 WHERE carrid = 'AA' INTO flights_table2.
+INSERT LINES OF flights_table1 WHERE carrid = 'AA' INTO TABLE flights_table2.
 ```
 </br>
 </br>
