Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -602,3 +602,150 @@ LOOP AT gs_tab INTO gs_line.
           gs_line-CITYTO.
 ENDLOOP.
 ```
+</br>
+
+**7) Standard Table에서 READ, MODIFY, DELETE, LOOP 사용**
+```abap
+DATA: gs_flight TYPE SFLIGHT,
+      gt_flight LIKE STANDARD TABLE OF gs_flight
+      WITH NON-UNIQUE KEY CARRID CONNID FLDATE.
+
+gs_flight-carrid = 'AA'.
+gs_flight-connid = '0017'.
+gs_flight-fldate = '20250501'.
+gs_flight-price = '10000'.
+gs_flight-currency = 'USD'.
+gs_flight-seatsmax = 400.
+gs_flight-seatsocc = 200.
+APPEND gs_flight TO gt_flight.
+
+gs_flight-carrid = 'BB'.
+gs_flight-connid = '0027'.
+gs_flight-fldate = '20260501'.
+gs_flight-price = '1000'.
+gs_flight-currency = 'EUR'.
+gs_flight-seatsmax = 550.
+gs_flight-seatsocc = 20.
+APPEND gs_flight TO gt_flight.
+
+gs_flight-carrid = 'AB'.
+gs_flight-connid = '0027'.
+gs_flight-fldate = '20260501'.
+gs_flight-price = '1000'.
+gs_flight-currency = 'EUR'.
+gs_flight-seatsmax = 550.
+gs_flight-seatsocc = 20.
+APPEND gs_flight TO gt_flight.
+
+gs_flight-carrid = 'BZ'.
+gs_flight-connid = '0027'.
+gs_flight-fldate = '20260501'.
+gs_flight-price = '1000'.
+gs_flight-currency = 'EUR'.
+gs_flight-seatsmax = 550.
+gs_flight-seatsocc = 20.
+APPEND gs_flight TO gt_flight.
+
+READ TABLE gt_flight INTO gs_flight
+     WITH TABLE KEY CARRID = 'AA' CONNID = '0017' FLDATE = '20250501'.
+
+*READ TABLE gt_flight INTO gs_flight
+*     INDEX 1.
+
+" 스트럭처의 값 변경
+gs_flight-price = '9500'.
+gs_flight-seatsmax = 555.
+
+" 변경된 스트럭처를 Internal table의 첫번째 레코드에 적용(변경)
+*MODIFY gt_flight FROM gs_flight INDEX 1.
+MODIFY TABLE gt_flight FROM gs_flight.
+*MODIFY gt_flight FROM gs_flight TRANSPORTING PRICE
+*  WHERE CARRID = 'AA'.
+MODIFY gt_flight FROM gs_flight INDEX 1 TRANSPORTING PRICE.
+
+CLEAR gs_flight.
+" READ TABLE 구분으로 Itab의 1번째 레코드 읽어서 gs_flight에 담는다
+READ TABLE gt_flight INTO gs_flight INDEX 1.
+
+  " 읽어온 1번째 레코드 gs_flight를 출력
+*  WRITE:/ gs_flight-carrid,
+*          gs_flight-connid,
+*          gs_flight-fldate,
+*          gs_flight-price,
+*          gs_flight-seatsmax.
+
+* Internal table에서 데이터 삭제
+* => DALETE <itab> <condition>
+*DELETE gt_flight INDEX 1.
+*DELETE gt_flight FROM 3. " 3 이후부터 전부 삭제
+*DELETE gt_flight TO 2.
+*DELETE gt_flight FROM 2 TO 4. " 범위 지정하여 삭제
+DELETE gt_flight WHERE carrid = 'AA'
+                       AND connid = '0017'
+                       AND fldate = '20250501'.
+
+LOOP AT gt_flight INTO gs_flight.
+  WRITE:/ gs_flight-carrid,
+          gs_flight-connid,
+          gs_flight-fldate,
+          gs_flight-price,
+          gs_flight-currency,
+          gs_flight-seatsmax,
+          gs_flight-seatsocc.
+ENDLOOP.
+```
+</br>
+
+**8) Standard Table에서 APPEND/INSERT LINES, MODIFY, DELETE, LOOP 사용**
+```abap
+TYPES: BEGIN OF ty_person,
+         fname TYPE s_fname,
+         lname TYPE s_lname,
+       END OF ty_person.
+
+DATA: gs_data  TYPE ty_person,
+      gt_itab1  TYPE TABLE OF ty_person,
+      gt_itab2 LIKE gt_itab1.
+
+gs_data-fname = 'Hong'.
+gs_data-lname = 'Gildong'.
+APPEND gs_data TO gt_itab1.
+
+gs_data-fname = 'Kim'.
+gs_data-lname = 'donggu'.
+APPEND gs_data TO gt_itab1.
+
+" itab1의 전체 레코드를 itab2에 추가
+APPEND LINES OF gt_itab1 TO gt_itab2.
+INSERT LINES OF gt_itab1 INTO TABLE gt_itab2.
+
+" 범위값 지정하여 여러 건의 레코드를 테이블에 추가
+APPEND LINES OF gt_itab1 FROM 1 TO 2 TO gt_itab2.
+INSERT LINES OF gt_itab1 FROM 2 INTO TABLE gt_itab2.
+INSERT LINES OF gt_itab1 TO 2 INTO TABLE gt_itab2.
+
+" Loop문으로 돌면서 modify
+LOOP AT gt_itab2 INTO gs_data.
+  gs_data-fname = '변경'.
+  MODIFY gt_itab2 FROM gs_data.
+ENDLOOP.
+
+" Modify 적용 후, 적용된 Internal table을 Loop 사용하여 출력해보기
+LOOP AT gt_itab2 INTO gs_data.
+  WRITE:/ sy-tabix,
+          gs_data-fname,
+          gs_data-lname.
+ENDLOOP.
+
+ULINE.
+
+" 범위값 지정하여 삭제
+DELETE gt_itab2 WHERE lname = 'Gildong'.
+
+" LOOP AT gt_itab2 INTO gs_data WHERE lname = 'Yewon'.
+LOOP AT gt_itab2 INTO gs_data.
+  WRITE:/ sy-tabix,
+          gs_data-fname,
+          gs_data-lname.
+ENDLOOP.
+```
