--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -227,6 +227,7 @@ APPEND LINES OF flights_table1 WHERE carrid = 'AA' TO flights_table2.
 **2-1) INSERT – 특정 위치 또는 조건에 값 삽입**
 - 조건 생략 → 맨 끝에 추가 (APPEND와 동일)
 - 조건/인덱스 지정 가능 → 원하는 위치에 삽입
+- INSERT 구문에는 WHERE 절은 지원되지 않음
 ```abap
 INSERT <work_area> INTO [TABLE] <internal_table> 
        [INDEX <n>] 
