Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -302,7 +302,8 @@ MODIFY flights_table FROM flight INDEX 2.
 - `FROM` → 구조체와 동일한 행 삭제
 ```abap
 DELETE <internal_table> 
-       [INDEX <n>] 
+       [INDEX <n>]                 " 단일 행 삭제 (Standard Table만)
+       [FROM <start> [TO <end>]]   " 범위 지정 삭제 (Standard Table 전용)
        [WHERE <field1> = <value1> <field2> = <value2> ...] 
        [FROM <work_area>] 
        [TABLE <internal_table> WHERE <condition>].
