Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -215,7 +215,11 @@ APPEND flight TO flights_table.
 **1-2) APPEND LINES OF – 다른 테이블의 여러 행 끝에 추가**
 - `<소스_테이블>`의 여러 행을 `<대상_테이블>` 끝에 추가
 ```abap
-APPEND LINES OF <소스_테이블> [WHERE <조건>] TO <대상_테이블>.
+APPEND LINES OF <source_table> 
+       [FROM <start> [TO <end>]]    " 범위 지정 (Standard Table 전용)
+       [WHERE <field1> = <value1> 
+              <field2> = <value2> …]  " 조건 지정
+       TO <target_table>.           " 추가할 테이블
 ```
 ```abap
 APPEND LINES OF flights_table1 WHERE carrid = 'AA' TO flights_table2.
@@ -243,7 +247,12 @@ INSERT flight INTO TABLE flights_table.  " 맨 끝
 **2-2) INSERT LINES OF – 다른 테이블의 여러 행 삽입**
 - `<소스_테이블>`의 여러 행을 `<대상_테이블>`에 삽입
 ```abap
-INSERT LINES OF <소스_테이블> [WHERE <조건1>] INTO TABLE <대상_테이블> [INDEX <위치>] [FROM <조건2>].
+INSERT LINES OF <source_table> 
+       [FROM <start> [TO <end>]]        " 범위 지정 (Standard Table 전용)
+       [WHERE <field1> = <value1> 
+              <field2> = <value2> …]  " 조건 필터링
+       INTO TABLE <target_table>       " 데이터를 삽입할 테이블
+       [INDEX <n>].                    " 삽입 위치 지정
 ```
 ```abap
 INSERT LINES OF flights_table1 WHERE carrid = 'AA' INTO TABLE flights_table2.
