Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -270,7 +270,7 @@ READ TABLE <인터널_테이블> INTO <행>
      [INDEX <위치>] [BINARY SEARCH].
 ```
 ```abap
-READ TABLE flights_table INTO flight WITH KEY carrid = 'AA' connid = '001'.
+READ TABLE flights_table INTO flight WITH TABLE KEY carrid = 'AA' connid = '001'.
 IF sy-subrc = 0.
   WRITE: / 'Flight found:', flight-carrid.
 ENDIF.
