Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -43,7 +43,7 @@
 ## < Internal Table 선언 3가지 방식 >
 </br>
 
-**1) Table Type 기반**
+**1) Table Type 기반(Global Type)**
 - 이미 정의된 Table Type을 사용하여 Internal Table 선언
 - Table Type에 Line Type, Table Kind, Key 등이 미리 정의되어 있어 코드가 간결
 ```abap
