Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -43,7 +43,7 @@
 ## < Internal Table 선언 3가지 방식 >
 </br>
 
-**1) Table Type 기반(Global Type)**
+**1) Table Type 기반 (Global Type)**
 - 이미 정의된 Table Type을 사용하여 Internal Table 선언
 - Table Type에 Line Type, Table Kind, Key 등이 미리 정의되어 있어 코드가 간결
 ```abap
@@ -57,7 +57,7 @@ DATA gt_flights TYPE tt_flights.
 </br>
 </br>
 
-**2) Table Kind + Key 직접 정의**
+**2) Table Kind + Key 직접 정의 (Local Type)**
 - Table Type 없이 Internal Table 종류(Standard/Sorted/Hashed)와 Key를 직접 지정
 - Table Type 없이 바로 선언 가능, Key 조건도 자유롭게 지정
 ```abap
@@ -123,7 +123,7 @@ DATA: gt_iteb1 TYPE STANDARD TABLE OF BC400_S_FLIGHT
 </br>
 </br>
 
-**3) Sorted Internal Table 선언**
+**3) Sorted Internal Table 선언**tkrwp
 - `gt_item4` : 지정된 키 기준으로 항상 정렬되는 Internal Table, 중복 키 허용.
 - `gt_itab5` : 지정된 키 기준으로 정렬, 중복 키 불가.
 ```abap
@@ -192,6 +192,22 @@ DATA: aa TYPE BC400_T_CONNECTIONS,
 ## < ABAP 인터널 테이블 CRUD 명령어 >
 - INDEX 사용 시 대부분 Table 이름 뒤에 TABLE 키워드 생략 가능
 - INSERT만 예외적으로 `INTO TABLE` 또는 `INTO itab` 둘 다 가능
+
+### 단건 CRUD
+| 기능 | 키워드 |
+|------|---------|
+| 조회 (READ) | `READ TABLE itab INTO wa WITH KEY ...` |
+| 추가 (CREATE) | `APPEND wa TO itab` / `INSERT wa INTO itab INDEX idx` |
+| 변경 (UPDATE) | `MODIFY itab FROM wa` |
+| 삭제 (DELETE) | `DELETE itab INDEX idx` / `DELETE itab WHERE ...` |
+
+### 다건 CRUD
+| 기능 | 키워드 |
+|------|---------|
+| 조회 (READ) | `LOOP AT itab INTO wa WHERE ...` / `LOOP AT itab FROM idx1 TO idx2` |
+| 추가 (CREATE) | `APPEND LINES OF itab_src TO itab_tgt` / `INSERT LINES OF itab_src INTO itab_tgt INDEX idx` |
+| 변경 (UPDATE) | `LOOP AT itab INTO wa ...` → `MODIFY itab FROM wa` |
+| 삭제 (DELETE) | `DELETE itab WHERE ...` / `DELETE itab FROM idx1 TO idx2` |
 </br>
 </br>
 
