Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -250,10 +250,7 @@ APPEND LINES OF flights_table1 WHERE carrid = 'AA' TO flights_table2.
 - 조건/인덱스 지정 가능 → 원하는 위치에 삽입
 - INSERT 구문에는 WHERE 절은 지원되지 않음
 ```abap
-INSERT <work_area> INTO [TABLE] <internal_table> 
-       [INDEX <n>] 
-       [TRANSPORTING <field1> <field2> ...] 
-       [LINES OF <source_table> INTO <target_table>].
+INSERT <작업_영역> INTO <내부_테이블> [INDEX <번호>].
 ```
 ```abap
 INSERT flight INTO TABLE flights_table INDEX 2.
