Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -281,7 +281,7 @@ INSERT LINES OF flights_table1 WHERE carrid = 'AA' INTO TABLE flights_table2.
 ```abap
 READ TABLE <인터널_테이블> INTO <행> 
      [WITH KEY <필드1> = <값1> <필드2> = <값2> …] 
-     [INDEX <위치>] [BINARY SEARCH].
+     [INDEX <위치>].
 ```
 ```abap
 READ TABLE flights_table INTO flight WITH TABLE KEY carrid = 'AA' connid = '001'.
