--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -1,5 +1,5 @@
 # Internal Table 정리
-### 1) MOVE-CORRESPONDING
+**1) MOVE-CORRESPONDING**
 - 동일한 이름을 가진 필드끼리 자동으로 값 복사
 - 워크에어리어나 내부 테이블 행 단위로 사용 가능
 ```abap
@@ -7,7 +7,7 @@ MOVE-CORRESPONDING <source> TO <target>.
 ```
 </br>
 
-### 2) SORT
+**2) SORT**
 - 내부 테이블의 데이터를 지정 필드 기준으로 정렬
 - Standard Table 기준, Sorted/Hashed Table에서는 일부 옵션 불가
 ```abap
