--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -11,6 +11,11 @@ MOVE-CORRESPONDING <source> TO <target>.
 **2) SORT**
 - 내부 테이블의 데이터를 지정 필드 기준으로 정렬
 - Standard Table 기준, Sorted/Hashed Table에서는 일부 옵션 불가
+- 정렬 기준:
+  - 기본: 내부 테이블의 키 필드
+  - BY <field>: 특정 필드 기준
+  - DESCENDING / ASCENDING: 내림차순/오름차순
+- 다중 필드 정렬도 가능
 ```abap
 SORT <itab>.                                  " 기본 키 기준
 SORT <itab> BY <field>.                       " 특정 필드 기준
