--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -20,9 +20,8 @@ MOVE-CORRESPONDING <source> TO <target>.
 SORT <itab>.                                " Table의 키 필드 기준 오름차순
 SORT <itab> BY <field>.                     " 특정 필드 기준 오름차순(생략 시 기본)
 SORT <itab> BY <field1> DESCENDING
-            <field2> ASCENDING.            " field1 내림차순, field2 오름차순(생략 시 기본)
-SORT <itab> BY <field1> <field2> DESCENDING. 
-" field1 오름차순(생략 시 기본), field2 내림차순
+               <field2> ASCENDING.            " field1 내림차순, field2 오름차순(생략 시 기본)
+SORT <itab> BY <field1> <field2> DESCENDING. `" field1 오름차순(생략 시 기본), field2 내림차순
 ```
 ```abap
 DATA: gt_flight TYPE TABLE OF flight.
