Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -31,3 +31,9 @@ SORT gt_flight BY carrid.
 SORT gt_flight BY carrid DESCENDING connid ASCENDING.
 SORT gt_flight BY carrid connid DESCENDING.
 ```
+
+</br>
+</br>
+
+<img width="913" height="635" alt="image" src="https://github.com/user-attachments/assets/1bcedf50-1956-4f23-863e-773fadf67b1e" />
+
