Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -31,9 +31,13 @@ SORT gt_flight BY carrid.
 SORT gt_flight BY carrid DESCENDING connid ASCENDING.
 SORT gt_flight BY carrid connid DESCENDING.
 ```
+</br>
+</br>
 
-</br>
-</br>
+**3) WITH HEADER LINE**
+- 내부 테이블 안에 자동으로 한 줄(row)을 나타내는 구조를 생성
+- 테이블 이름과 동일한 구조가 만들어져 별도 워크에어리어 없이 한 줄 데이터를 바로 사용 가능
+
 
 <img width="913" height="635" alt="image" src="https://github.com/user-attachments/assets/1bcedf50-1956-4f23-863e-773fadf67b1e" />
 
