Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -37,9 +37,72 @@ SORT gt_flight BY carrid connid DESCENDING.
 **3) WITH HEADER LINE**
 - 내부 테이블 안에 자동으로 한 줄(row)을 나타내는 구조를 생성
 - 테이블 이름과 동일한 구조가 만들어져 별도 워크에어리어 없이 한 줄 데이터를 바로 사용 가능
+  - `itab[]` → 테이블 전체
+  - `itab` → 테이블의 헤더라인(한 줄)
 ```abap
 DATA: <itab> TYPE TABLE OF <structure> WITH HEADER LINE.
 ```
+```abap
+DATA: gt_flight TYPE TABLE OF flight WITH HEADER LINE.
 
-<img width="913" height="635" alt="image" src="https://github.com/user-attachments/assets/1bcedf50-1956-4f23-863e-773fadf67b1e" />
+" 헤더라인 사용 예시
+gt_flight-carrid = 'AA'.
+APPEND gt_flight.
+```
+</br>
+</br>
+
+**4) REFRESH**
+- 내부 테이블 내용 초기화
+- 테이블이 존재하면 바디(데이터: `itab[]`)만 삭제, 구조와 타입은 유지
+- 테이블이 없으면 생성 후 초기화
+```abap
+REFRESH <itab>.
+```
+```abap
+DATA: gt_flight TYPE TABLE OF flight.
+
+" 내부 테이블 내용 삭제
+REFRESH gt_flight.
+```
+</br>
+</br>
+
+**5) CLEAR**
+- 변수/워크에어리어를 초기화
+- 숫자는 0, 문자형은 공백, 구조는 내부 필드별 초기화
+- 단일 필드 또는 전체 구조 초기화 가능
+```abap
+CLEAR <variable>.
+```
+```abap
+DATA: ls_flight TYPE flight.
+
+CLEAR ls_flight.
+" 모든 필드 0/공백으로 초기화
+```
+</br>
+</br>
+
+**6) FREE**
+- 내부 테이블의 메모리까지 완전히 해제
+- REFRESH와 달리 테이블 자체 메모리 공간도 반환
+```abap
+FREE <itab>.
+```
+```abap
+DATA: gt_flight TYPE TABLE OF flight.
+
+FREE gt_flight.
+" 내부 테이블 삭제 + 메모리 해제
+```
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+
 
