Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -104,7 +104,41 @@ FREE gt_flight.
 </br>
 
 ## < 실습 코드 >
-</br>
 
 ### 실습 1
+- LOOP AT 반복문과 MODIFY를 이용하여 결과 출력
+```abap
+DATA: gs_data TYPE bc400_s_flight,
+      gt_data TYPE TABLE OF bc400_s_flight.
+
+SELECT carrid connid fldate seatsmax seatsocc
+  FROM sflight
+  INTO TABLE gt_data
+  WHERE carrid = 'AA'.
+
+" 1) 만약 sy-subrc가 0 이라면
+" gt_data를 LOOP 돌면서 Percentage 계산하여 MODIFY를 이용해 반영한다.
+" 계산식 : percentage = seatsocc * 100 / seatmax
+
+IF ( sy-subrc = 0 ).
+  LOOP AT gt_data INTO gs_data.
+    gs_data-percentage = gs_data-seatsocc * 100 / gs_data-seatsmax.
+    MODIFY gt_data FROM gs_data.
+  ENDLOOP.
+ENDIF.
+
+" 2) percentage 반영된 itab을 LOOP 돌면서,
+"    percentage 가 80을 초과하는 레코드만 출력한다. (출력필드는 전체필드 기준)
+
+LOOP AT gt_data INTO gs_data.
+  IF ( gs_data-percentage > 80 ).
+    WRITE:/ gs_data-carrid,
+            gs_data-connid,
+            gs_data-fldate,
+            gs_data-seatsmax,
+            gs_data-seatsocc,
+            gs_data-percentage.
+  ENDIF.
+ENDLOOP.
+```
 
