Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -132,15 +132,13 @@ ENDIF.
 " 2) percentage 반영된 itab을 LOOP 돌면서,
 "    percentage 가 80을 초과하는 레코드만 출력한다. (출력필드는 전체필드 기준)
 
-LOOP AT gt_data INTO gs_data.
-  IF ( gs_data-percentage > 80 ).
-    WRITE:/ gs_data-carrid,
-            gs_data-connid,
-            gs_data-fldate,
-            gs_data-seatsmax,
-            gs_data-seatsocc,
-            gs_data-percentage.
-  ENDIF.
+LOOP AT gt_data INTO gs_data WHERE percentage > 80.
+  WRITE:/ gs_data-carrid,
+          gs_data-connid,
+          gs_data-fldate,
+          gs_data-seatsmax,
+          gs_data-seatsocc,
+          gs_data-percentage.
 ENDLOOP.
 ```
 
