--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -103,7 +103,26 @@ FREE gt_flight.
 </br>
 
 ## < ABAP 데이터 모델과 데이터베이스 관계 이해 >
+**1) ABAP Dictionary (SE11)**
+- 데이터 구조를 논리적으로 정의하는 곳
+- 테이블, 뷰, 구조, 데이터 요소 등을 설계하지만, 실제 데이터는 저장하지 않음
+- 프로그램에서 사용할 데이터의 설계도 역할을 합니다.
+- Transparent Table로 정의하면 DB에 1:1 매핑됩니다.
+</br>
 
+**2) Relational Database (DB)**
+- 실제 데이터를 물리적으로 저장하는 공간
+- Dictionary에서 정의한 테이블 구조를 기반으로 DB에 생성
+- 데이터가 존재하며, 프로그램에서 읽고 쓸 수 있음
+</br>
+
+**3) Transparent Table**
+- Dictionary에서 정의하면 DB에 1:1 매핑되는 테이블
+- 구조를 알 수 있기 때문에 프로그램에서는 DATA <structure>로 선언하여 바로 사용 가능합니다.
+- MANDT(Client) 필드는 항상 포함되어야 하는 필수 필드
+  - 다중 클라이언트 환경에서 데이터 구분용
+  - SAP 시스템에서 클라이언트를 식별하는 역할
+  - 예: `MANDT = client`
 
 </br>
 </br>
