--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -125,6 +125,40 @@ FREE gt_flight.
   - 다중 클라이언트 환경에서 데이터 구분용
   - SAP 시스템에서 클라이언트를 식별하는 역할
   - 예: `MANDT = client`
+</br>
+</br>
+</br>
+
+## < ABAP 3티어 구조와 Open SQL 처리 흐름 >
+</br>
+
+### ABAP 3티어 구조
+1) Application Layer (애플리케이션 서버)
+   - ABAP 프로그램이 실행되는 곳
+   - 비즈니스 로직 처리
+2) Database Layer (DB 서버)
+   - 실제 데이터를 저장하는 곳
+   - RDBMS (Oracle, HANA 등)
+3) Presentation Layer (UI)
+   - 사용자와 시스템이 상호작용하는 인터페이스
+</br>
+</br>
+</br>
+
+**1) Native SQL**
+- 특정 DB에 맞는 SQL 문을 직접 작성
+- DB 고유 기능 활용 가능
+- 다른 DB로 변경하면 SQL 문도 수정해야 함
+</br>
+</br>
+
+**2) Open SQL**
+- ABAP에서 표준 SQL 문법 사용
+- Database Interface를 거쳐 DB에 맞게 변환
+- DB 종류가 바뀌어도 프로그램 수정 없이 그대로 사용 가능
+</br>
+</br>
+
 
 </br>
 </br>
