Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -145,6 +145,7 @@ FREE gt_flight.
 </br>
 </br>
 
+### SQL 사용 방식
 **1) Native SQL**
 - 특정 DB에 맞는 SQL 문을 직접 작성
 - DB 고유 기능 활용 가능
@@ -158,6 +159,14 @@ FREE gt_flight.
 - DB 종류가 바뀌어도 프로그램 수정 없이 그대로 사용 가능
 </br>
 </br>
+</br>
+
+### Database Interface 역할
+1. Open SQL 문법 체크
+2. Open SQL → Native SQL 변환
+3. 결과를 버퍼에 저장
+   
+<img width="629" height="431" alt="image" src="https://github.com/user-attachments/assets/69331920-9efa-470d-982d-3b29eff34b9f" />
 
 
 </br>
