Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -163,8 +163,9 @@ FREE gt_flight.
 3. 결과를 버퍼에 저장
    
 <img width="498" height="341" alt="image" src="https://github.com/user-attachments/assets/c440c952-b86d-4e29-a5c5-9b86499b082a" />
+</br>
 
-
+<img width="478" height="310" alt="image" src="https://github.com/user-attachments/assets/1e2b9d76-178b-4210-9fca-a5d5d0f38ca8" />
 
 </br>
 </br>
