Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -105,6 +105,19 @@ FREE gt_flight.
 ---
 </br>
 
+## < ABAP 기본 문법 >
+</br>
+
+**1) SELECT**
+
+
+</br>
+</br>
+</br>
+
+---
+</br>
+
 ## < ABAP 데이터 모델과 데이터베이스 관계 이해 >
 **1) ABAP Dictionary (SE11)**
 - 데이터 구조를 논리적으로 정의하는 곳
