Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -109,8 +109,49 @@ FREE gt_flight.
 </br>
 
 **1) SELECT**
+- ABAP 프로그램에서 데이터베이스 테이블의 데이터를 읽어오는 SQL 명령어
+```abap
+SELECT <field1> <field2> ...
+  FROM <table>
+  [INTO <target>]
+  [WHERE <condition>]
+  [ORDER BY <field>].
+```
+```abap
+DATA: lt_flight TYPE TABLE OF sflight,
+      ls_flight TYPE sflight.
 
+" 모든 데이터 조회
+SELECT * FROM sflight INTO TABLE lt_flight.
 
+" 조건 조회
+SELECT carrid connid
+  FROM sflight
+  INTO TABLE lt_flight
+  WHERE carrid = 'AA'
+  ORDER BY connid.
+```
+</br>
+
+**2) Single (1건 조회)**
+- 조건에 맞는 단일 레코드를 조회할 때 사용
+```abap
+SELECT SINGLE <field1> <field2> ...
+  FROM <table>
+  INTO <target>
+  WHERE <condition>.
+```
+```abap
+DATA: ls_flight TYPE sflight.
+
+" 단일 레코드 조회
+SELECT SINGLE carrid connid
+  FROM sflight
+  INTO ls_flight
+  WHERE carrid = 'AA' AND connid = '0017'.
+
+WRITE: / ls_flight-carrid, ls_flight-connid.
+```
 </br>
 </br>
 </br>
