Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -105,7 +105,7 @@ FREE gt_flight.
 ---
 </br>
 
-## < ABAP 기본 문법 >
+## < ABAP 추가가 문법 >
 </br>
 
 **1) SELECT**
@@ -153,6 +153,25 @@ SELECT SINGLE carrid connid
   WHERE carrid = 'AA' AND connid = '0017'.
 
 WRITE: / ls_flight-carrid, ls_flight-connid.
+```
+</br>
+</br>
+
+**3) CORRESPONDING FIELDS OF**
+- 구조 간 동일한 이름을 가진 필드만 선택적으로 복사하는 ABAP 구문
+```abap
+<target_structure> = CORRESPONDING FIELDS OF <source_structure>.
+```
+```abap
+DATA: ls_flight TYPE sflight.
+
+" sflight 테이블에서 seatmax, seatsocc 필드만 ls_flight로 복사
+SELECT SINGLE seatmax seatsocc
+  FROM sflight
+  INTO CORRESPONDING FIELDS OF ls_flight
+  WHERE carrid = 'AA' AND connid = '0017'.
+
+WRITE: / ls_flight-seatmax, ls_flight-seatsocc.
 ```
 </br>
 </br>
